<resources>

    <string name="app_name">EcoRutasApp</string>
    <string name="mapa_rutas">Mapa de Rutas</string>
    <string name="menu">Menú</string>
    <string name="perfil">Perfil</string>
    <string name="agregar">Agregar marcador</string>
    <string name="ubicacion">Centrar en ubicación</string>
    <string name="brujula">Mostrar brújula</string>
    <string name="bicicleta">Ruta en bicicleta</string>
    <string name="caminante">Ruta caminando</string>


    <string name="logo_ecorutas">Logo de EcoRutas</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta? Regístrate</string>


    <string name="nombre_completo">Nombre </string>
    <string name="apellido">Apeliido</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="default_web_client_id">tu_client_id_de_firebase</string>


    <string name="msg_complete_fields">Completa todos los campos</string>
    <string name="msg_error">Error: %1$s</string>
    <string name="msg_user_registered">Usuario registrado</string>
    <string name="msg_password_mismatch">Las contraseñas no coinciden</string>

    <!-- Alquiler -->
    <string name="mis_alquileres">Mis Alquileres</string>
    <string name="nuevo_alquiler">Nuevo Alquiler</string>

    <string name="rutas_disponibles">Rutas Disponibles</string>
    <string name="nueva_ruta">Nueva Ruta</string>
    <string name="ruta_icono">Ícono de ruta</string>

    <string name="perfil_usuario">Perfil del Usuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="mis_logros">Mis Logros</string>
    <string name="icono_logro">Ícono de logro</string>


    <string name="historial_rutas">Historial</string>

    <string name="estadisticas">Estadísticas</string>
    <string name="resumen_general">Resumen General</string>
    <string name="co2_ahorrado">CO₂ Ahorrado</string>
    <string name="km_recorridos">Kilómetros Recorridos</string>
    <string name="rutas_completadas">Rutas Completadas</string>
    <string name="icono_co2">Ícono de CO₂</string>
    <string name="icono_km">Ícono de kilómetros</string>
    <string name="icono_rutas">Ícono de rutas</string>
    <string name="google_maps_key">AIzaSyAgaBt-YhWFA11DS5kAn-LhExVa1HjPAwk</string>

    <string name="select_transport_mode">Seleccionar modo de transporte</string>


    <string-array name="modos_transporte">
        <item>BICICLETA</item>
        <item>SCOOTER</item>
        <item>CARPOOL</item>
        <item>MONOPATIN_ELECTRICO</item>
        <item>SEGWAY</item>
    </string-array>


</resources>
